--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <main>
-        <h2> Trabel </h2>
+        <h2> Travel </h2>
         <img src="yourPicHere" width="200" alt="Image of your Topic here.">
 
         <h3>Top Three Reasons We picked Our Topic</h3>
