--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="Yutong.html">Yutong Ren</li>
-                <li><a href="ruiqi.html">Ruiqi Xu</li>
+                <li><a href="Yutong.html">Yutong Ren</a></li>
+                <li><a href="ruiqi.html">Ruiqi Xu</a></li>
             </ul>
         </nav>
         <h1>Week Two discussion</h1>
