--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
         <h3>Top Three Reasons We picked Our Topic</h3>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>We both love travelling.</li>
+            <li>Iceland is a cool place.</li>
+            <li>Pictures of Iceland are easy to get on the Internet.</li>
         </ul>
     </main>
 
