--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <main>
         <h2> Travel </h2>
-        <img src="yourPicHere" width="200" alt="Image of your Topic here.">
+        <img src="iceland_pic.jpeg" width="200" alt="Image of your Topic here.">
 
         <h3>Top Three Reasons We picked Our Topic</h3>
         <ul>
